--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.28)
 project(RedHotHouseFinder LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Fetch SFML
 include(FetchContent)
 FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
@@ -12,6 +15,34 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp)
-target_compile_features(main PRIVATE cxx_std_17)
-target_link_libraries(main PRIVATE SFML::Graphics)
+# Create library from src (excluding main.cc)
+file(GLOB SRC_FILES "src/*.cc")
+list(REMOVE_ITEM SRC_FILES "${CMAKE_SOURCE_DIR}/src/main.cc")
+
+add_library(project_lib STATIC ${SRC_FILES})
+target_include_directories(project_lib PUBLIC
+    ${CMAKE_SOURCE_DIR}/src
+    ${SFML_INCLUDE_DIRS}  # Propagate SFML includes
+)
+target_link_libraries(project_lib PUBLIC SFML::Graphics)  # Changed to PUBLIC
+
+# Main executable
+add_executable(main src/main.cc)
+target_link_libraries(main PRIVATE project_lib)
+
+# Hold test executables
+set(TEST_EXECUTABLES "")
+
+# Add tests subdirectory
+add_subdirectory(tests)
+
+# Add test runner subdirectory
+add_subdirectory(test_runner)
+
+# Custom target to run tests
+add_custom_target(run-tests
+    COMMAND test_runner
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    DEPENDS test_runner ${TEST_EXECUTABLES}
+    USES_TERMINAL
+)
